sandbox/output
PatientTest.java:26: error: cannot find symbol
        Patient patient = new Patient(Arrays.asList(codeine, prozac));
                                                             ^
  symbol:   variable prozac
  location: class PatientTest
1 error
